# LearnX-CLI

./: .dockerignore  .gitignore  CLAUDE.md  DEVLOOP.md  Dockerfile  README.md  README_v1.md  day4.md  day5.md  day6.md  devloop.toml  next_step.md  old_readme.md  pyproject.toml
.claude/: settings.assisted.json  settings.json
.claude/agents/: README.md  implementation.md  quality.md  (+5 more)
dev_setup/: README.md  autonomy_plan.md  container_plan.md  context_hygiene_plan.md  guidance.md  handoff_template.md  run_example.md  sandbox_plan.md  spec-driven_plan.md
fixes/: fix001.md  fix002.md  fix003.md  fix004.md  fix005.md  fix006.md  fix007.md  fix008.md  fix009.md  fix010.md  fix011.md  fix012.md  fix013.md  fix014.md  fix015.md  fix016.md  fix017.md  fix018.md  fix019.md  fix020.md  fix021.md  fix022.md  fix023.md  fix024.md  fix025.md  fix026.md  fix027.md  fix028.md  fix029.md  fix030.md  fix031.md  fix032.md  fix033.md  fix034.md  fix035.md  fix036.md  fix037.md  fix038.md  fix039.md  fix040.md  (+1 more)
learning/: javaConcept.md
plan/: devloop_cli_plan.md  devloop_packaging_plan.md  v0_plan.md  v10_plan.md  v11_plan.md  v12_plan.md  v1_plan.md  v2_plan.md  v3_plan.md  v3_plan_updated.md  v4_architecture.md  v4_update_plan.md  v5_plan.md  v6_plan.md  v7_plan.md  v8_plan.md  v9_plan.md
scripts/: devloop.py  learnx_dk.py  run_review.py  test_openrouter_models.py
specs/: day1.md  day2.md  fix.md
tutor/: .env copy.example  __main__.py  config.py  conftest.py  constants.py  exceptions.py  inspector.py  llm_config.toml  models.py  requirements-dev.txt  requirements.txt  tutor.py
(+169 files in other folders)
