[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "learnx-cli"
version = "0.3.0"
description = "Turn any Markdown document into an audio tutorial and MP4 video"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pydub>=0.25",
    "tqdm>=4.60",
    "python-dotenv>=1.0",
    "openai>=1.30",
    "pygame-ce>=2.5",
    "Pillow>=10.0",
    "edge-tts>=6.1",
    "playwright>=1.44",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-Pillow",
    "types-tqdm",
]

[project.scripts]
learnx = "tutor.cli.shell:run_shell"

[tool.hatch.build.targets.wheel]
packages = ["tutor"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tutor/tests"]
asyncio_mode = "auto"
markers = ["slow: marks tests as slow (browser-dependent)"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tutor/tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
exclude = ["tutor/tests/"]

[[tool.mypy.overrides]]
module = ["pygame.*", "pydub.*", "edge_tts.*", "readchar.*"]
ignore_missing_imports = true
